@@ -14,6 +14,7 @@ Improvements:
 
 Bug fixes:
 
+ - Status view: show error when failing to open a file.
  - Blame view: fix problem with uninitialized variable.
  - Blame view: use line number information when loading blame for
    specific commit.
